force-app/main/default/objects/CountryMapping__mdt/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <description>Country label from Account (Account.SPO_Country__pc)</description>
    <label>Account</label>
    <length>200</length>
    <type>Text</type>
</CustomField>