force-app/main/default/objects/CountryMapping__mdt/fields/Case__c.field-meta.xml
<CustomField>
    <fullName>Case__c</fullName>
    <description>Country label from Case (country__c) or Task (country__c)</description>
    <label>Case</label>
    <length>200</length>
    <type>Text</type>
</CustomField>