force-app/main/default/objects/CountryMapping__mdt/fields/Cisco__c.field-meta.xml
<CustomField>
    <fullName>Cisco__c</fullName>
    <description>Country label from CISCO (if not in ISO3)</description>
    <label>Cisco</label>
    <length>200</length>
    <type>Text</type>
</CustomField>