force-app/main/default/objects/CountryMapping__mdt/fields/EscalationTeam__c.field-meta.xml
<CustomField>
    <fullName>EscalationTeam__c</fullName>
    <description>Escalation Team matching the country</description>
    <label>EscalationTeam</label>
    <length>50</length>
    <type>Text</type>
</CustomField>