force-app/main/default/objects/CountryMapping__mdt/fields/HasOtherValue__c.field-meta.xml
<CustomField>
    <fullName>HasOtherValue__c</fullName>
    <defaultValue>false</defaultValue>
    <description>true if the country&apos;s value has no ISO3 code
(ex: StoreDB system has no ISO3 code for some values : ISO3 code will be USA for HAWAII, GBR for England, MNP for SAIPAN, KOR for &apos;KOREA (DOM)&apos;...)</description>
    <inlineHelpText>true if the country&apos;s value has no ISO3 code
(ex: StoreDB system has no ISO3 code for some values : ISO3 code will be USA for HAWAII, GBR for England, MNP for SAIPAN, KOR for &apos;KOREA (DOM)&apos;...)</inlineHelpText>
    <label>Has Other Value</label>
    <type>Checkbox</type>
</CustomField>