force-app/main/default/objects/CountryMapping__mdt/fields/IPD_CC__c.field-meta.xml
<CustomField>
    <fullName>IPD_CC__c</fullName>
    <description>holds the email address of people in copy of the email separeated by &quot;|&quot;</description>
    <label>IPD_CC</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>