force-app/main/default/objects/CountryMapping__mdt/fields/IPD_To__c.field-meta.xml
<CustomField>
    <fullName>IPD_To__c</fullName>
    <description>Holds the recipients email address separated by a &quot;|&quot;</description>
    <label>IPD_To</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>