force-app/main/default/objects/CountryMapping__mdt/fields/Iso3Code__c.field-meta.xml
<CustomField>
    <fullName>Iso3Code__c</fullName>
    <description>ISO3 code</description>
    <label>Iso3Code</label>
    <length>3</length>
    <type>Text</type>
</CustomField>