force-app/main/default/objects/CountryMapping__mdt/fields/PicklistValueSet__c.field-meta.xml
<CustomField>
    <fullName>PicklistValueSet__c</fullName>
    <description>Based on Country Picklist value set label</description>
    <label>PicklistValueSet Label</label>
    <length>200</length>
    <type>Text</type>
</CustomField>