force-app/main/default/objects/CountryMapping__mdt/fields/QueueApproval__c.field-meta.xml
<CustomField>
    <fullName>QueueApproval__c</fullName>
    <label>QueueApproval</label>
    <length>50</length>
    <type>Text</type>
</CustomField>