force-app/main/default/objects/CountryMapping__mdt/fields/QueueMessaging__c.field-meta.xml
<CustomField>
    <fullName>QueueMessaging__c</fullName>
    <label>QueueMessaging</label>
    <length>50</length>
    <type>Text</type>
</CustomField>