force-app/main/default/objects/CountryMapping__mdt/fields/StoreOrUser__c.field-meta.xml
<CustomField>
    <fullName>StoreOrUser__c</fullName>
    <description>Country name from StoreDB (Store__c object &gt; StoreCountry__c field) OR from User.Country__c (same values)
Used for the CTI Connector (Bucher+Suter) which sends the store code and with some code, the Task.Country__c is automaticaly filled.</description>
    <label>StoreDB Or User</label>
    <length>200</length>
    <type>Text</type>
</CustomField>