force-app/main/default/objects/CountryMapping__mdt/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>Picklist__c</columns>
    <columns>QueueApproval__c</columns>
    <columns>Nationality__c</columns>
    <columns>MasterLabel</columns>
    <columns>Iso2Code__c</columns>
    <columns>Iso3Code__c</columns>
    <columns>Calling_Code__c</columns>
    <columns>DeveloperName</columns>
    <columns>HasOtherValue__c</columns>
    <columns>PicklistValueSet__c</columns>
    <columns>Account__c</columns>
    <columns>Case__c</columns>
    <columns>Cisco__c</columns>
    <columns>QueueMessaging__c</columns>
    <columns>IPD_To__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
    <language>en_US</language>
</ListView>